# dpm

./: .gitmodules  Cargo.toml  README.md  index.html
.devcontainer/: devcontainer.json
.github/workflows/: pages.yml
assets/: index-ea31d2fd.css
docs/: docker-compose.yml  index.html  package-lock.json  package.json
src/: cli_lib.rs  configuration_manager.rs  macros.rs  main.rs  option_manager.rs  options.rs  program_execution.rs  sources.rs
src/cli/: configuration_manager.rs  install.rs  install_usage.txt  mod.rs  options.rs  program_usage.txt  run.rs  update.rs
