[package]
name = "dpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
serde = "1.0.163"
serde_derive = "1.0.163"

[dependencies.confy]
features = ["yaml_conf"]
default-features = false
