[package]
name = "dpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
serde = "1.0.163"
serde_derive = "1.0.163"
confy = { version = "0.5.1", features = [
    "yaml_conf",
], default_features = false }
is-root = "0.1.2"
serde_yaml = "0.9.21"
reqwest = { version = "0.11", features = ["blocking"] }